# ruleopt

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  explainer_doc.md  getting_started.md  index.rst  solvers.md
docs/source/doc/: api_reference.rst  cost_api.rst  estimators_api.rst  explainer_api.rst  rug_api.rst  rux_api.rst  ruxlgbm_api.rst  ruxxgb_api.rst  solver_api.rst
examples/distributed/: distributed_simple.py
examples/explainer/: explainer_simple.py
examples/lightgbm/: lightgbm_native.py  lightgbm_simple.py
examples/optuna/: optuna_simple.py
examples/sklearn/: grid_search.py  rug_simple.py  rux_simple.py
examples/xgboost/: xgboost_simple.py
ruleopt/: __init__.py
ruleopt/aux_classes/: __init__.py  aux_classes.pxd  aux_classes.pyx
ruleopt/distributed/: __init__.py  ray_solver_gurobi.py  rug_distributed.py
ruleopt/estimator/: __init__.py  base.py  lightgbm_.py  rug.py  rux.py  xgboost_.py
ruleopt/estimator/sklearn_/: __init__.py  base_sklearn.py  rug.py  rux.py
ruleopt/explainer/: __init__.py  explainer.py
ruleopt/rule_cost/: __init__.py  rule_cost.py
ruleopt/solver/: __init__.py  base.py  beta_filler.pyx  cplex_solver.py  gurobi_solver.py  highs_solver.py  ortools_solver.py  solver_utils.pyx
ruleopt/utils/: __init__.py  utils.py
